--- a/PROYECTO-MJC memoorize/login/recuperar/css/style.css
+++ b/PROYECTO-MJC memoorize/login/recuperar/css/style.css
@@ -6,6 +6,7 @@ body{
     overflow: hidden;
     height: 100vh;
     margin: 0;
+
 }
 
 /*botones*/
@@ -14,10 +15,15 @@ body{
     height: 40px;
     background-color: rgb(211, 153, 46) !important;  
     transition: 600ms;
-    margin-top: 6%;
+    margin-top: 5%;
 }
 .btnLogin:hover{
     transform: scale(0.9);
+}
+#response{
+    color: #000000;
+    font-size: 1.0em; 
+    
 }
 /*Formulario*/
 #formulario{
@@ -36,7 +42,7 @@ body{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     display: flex;
-    bottom: 10vh;
+    bottom: 0vh;
 }
 #formulario::after {
     content: "";
@@ -63,12 +69,44 @@ body{
         background-position: 0 0;
     }
 }
-#formulario:hover{
-    transform: none;
-    box-shadow: 0px 0px 40px rgb(0, 0, 0);
-}
 .logoForm{
     margin: auto;
+}
+.hibtn{
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+}
+.hibtn:hover{
+    background: radial-gradient(circle, rgba(255, 255, 212, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+}
+.modal-footer {
+    border: none !important;
+}
+.modal-content {
+    padding: 20px;
+    font-family: 'Pirata One', cursive; 
+    font-size: 22px;
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+    box-shadow: 0 0 15px rgb(255, 166, 0),
+    inset 0 0 10px rgb(44, 166, 227); 
+    background-repeat: no-repeat; 
+    background-position: center;
+
+}
+.bodyModal{
+    padding: 20px;
+    font-family: 'Pirata One', cursive; 
+    font-size: 22px;
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+    box-shadow: 0 0 15px rgb(255, 166, 0) !important ;
+    inset: 0 0 10px rgb(44, 166, 227) ; 
+    background-repeat: no-repeat; 
+    background-position: center;
 }
 .logoForm img{
     width: 175px;
@@ -101,44 +139,58 @@ body{
     user-select: none;
     cursor: pointer;
 }
+#togglePassword{
+    position: absolute;
+    display: block;
+    bottom: .5rem;
+    right: 1rem;
+    
+    user-select: none;
+    cursor: pointer;
+}
+#togglePassword img{
+    width: 15px;
+    height: 15px;
+}
 #icon img{
     width: 15px;
     height: 15px;
 }
 input.input{    
-    padding-right: 2.5rem;
-    background-color: rgba(255, 255, 255, 0.427);
-    border: 1px solid#F28F16;
-    transition: 100ms;
-  }
-  input.input:focus{
-      background-color: rgba(255, 255, 255, 0.77);
-      border: 1px solid black;
-      box-shadow: 0px 0px 5px#F28F16;
-  }
-  input.input:hover {  
-      background-color: rgba(255, 255, 255, 0.692);
-      
-  }
-  .text{
-      color: #ffffff;
-      text-align: center;
-      font-size: 25px;
-      font-family: 'Pirata One', cursive; 
-  }
-  text:hover{
-      transform: scale(1.1);
-      
-  }
-  .text2{
-      color:#014d7d; 
-      text-align: center;
-      font-family: 'Pirata One', cursive; 
-      font-size: 40px;
-  }
-  .text2:hover{
-      color: rgb(54, 32, 225)
-  }
+  padding-right: 2.5rem;
+  background-color: rgba(255, 255, 255, 0.427);
+  border: 1px solid#F28F16;
+  transition: 100ms;
+}
+input.input:focus{
+    background-color: rgba(255, 255, 255, 0.77);
+    border: 1px solid black;
+    box-shadow: 0px 0px 5px#F28F16;
+}
+input.input:hover {  
+    background-color: rgba(255, 255, 255, 0.692);
+    
+}
+.text{
+    color: #ffffff;
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Pirata One', cursive; 
+}
+text:hover{
+    transform: scale(1.1);
+    
+}
+.text2{
+    color:#014d7d; 
+    text-align: center;
+    font-family: 'Pirata One', cursive; 
+    font-size: 40px;
+}
+.text2:hover{
+    color: rgb(54, 32, 225)
+}
+
 /*sonido*/
 #playButton {
     font-size: 20px;
@@ -152,37 +204,29 @@ input.input{
     transition: 100ms;
 }
 .imgSonido{
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
+    
 }
 #playButton:hover {
     transform: scale(1.1);
 }
-
-/*iconosRedes*/
-.logoRedes{
-    margin: auto;
+.back-button {
+    left: 2%;
+    bottom: 79%;
+    position: fixed;
 }
-.logoRedes img{
+.back-button:hover {
+    transform: scale(0.9);
+}
+.back-button-img{
     width: 25%;
     height: 25%;
-    transition: 200ms;
-}
-.logoRedes img:hover{
-    transform: scale(1.2);
-}
-.facebook{
-    position: relative;
-    left: 75%;
-}
-.gitHub{
-    position: relative;
-    left: 40%;
 }
 
 /*texto*/
 .textCrear{
-    font-size: 2.5em;
+    font-size: 1.8em;
     
     color:#ffffff;
     font-family: 'Pirata One', cursive; 
@@ -213,6 +257,7 @@ input.input{
 .textOlvide a:hover{
     color: rgb(167, 225, 32) !important;
 }
+
 /*quitar link*/
 a:link, a:visited, a:active {
     text-decoration:none;
@@ -223,7 +268,7 @@ a:link, a:visited, a:active {
         width: 90%;
         padding: 20px;
         margin: 0 auto; 
-        top: 100px;
+        margin-right: 7%;
     }
     .btnLogin {
         width: 100%;
@@ -231,14 +276,15 @@ a:link, a:visited, a:active {
     .logoForm img {
         width: 120px;
         height: 120px;
-    }#playButton {
+    }
+    #playButton {
         font-size: 20px;
         padding: 10px 20px;
         background-color: rgba(73, 20, 20, 0);
         border: none;
         cursor: pointer;
         position: relative;
-        top: 60px;
+        
         right: 5%;;
         z-index: 10;
         transition: 100ms;
@@ -247,6 +293,11 @@ a:link, a:visited, a:active {
         width: 45%;
         height: 45%;
         transition: 200ms;
+    }
+    .imgSonido{
+        width: 50px;
+        height: 50px;
+        
     }
 }
 /* Estilos para pantallas de computadora */
@@ -257,7 +308,6 @@ a:link, a:visited, a:active {
         padding: 30px;       
         margin: 0% auto;
         box-shadow: 0px 0px 40px rgb(0, 0, 0, 0.3);
-        
     }
 
     /* Botón de inicio de sesión */
@@ -294,7 +344,10 @@ a:link, a:visited, a:active {
     }
 
     /* Tamaños de texto */
-    .textCrear, .textOlvide {
+    .textOlvide {
+        font-size: 1.2em;
+    }
+    .textCrear{
         font-size: 1.2em;
     }
 }
