--- a/PROYECTO-MJC memoorize/views/principal.html
+++ b/PROYECTO-MJC memoorize/views/principal.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style/principal.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../style/icon.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link href="../https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body> 
@@ -16,12 +17,13 @@
         <div class="container-fluid">
             <audio id="miCancion" src="../audio/no-copyright-music-181373.mp3" preload="auto" loop></audio>
             <button id="playButton" onclick="toggleSound()">
-                <img class="imgSonido" src="../img/icon/noSonido.png" alt="Control de Sonido">
+                <img class="imgSonido" src="../img/musica.png" alt="Control de Sonido">
             </button>
         </div>
         
     </header> 
     <div class="container-fluid">
+        
         <img src="../img/logo/aqua-Memorize.png" alt="Logo del Juego" class="logo"> 
         <button class="button2" href="../views/bar.html" onclick="createBubbles(event)">
             <h3 class="btnTex">JUGAR</h3>  
