--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -10,34 +10,34 @@ body {
 }
 .map-container {
     position: relative;
-    width: 900px;
-    height: 500px;
-    background-image: url('../../../img/so.avif'); 
-    margin-top: 9%;
+    width: 880px;
+    height: 580px;
+    background: radial-gradient(circle, rgba(203, 255, 46, 0.778) 0%, rgb(16, 137, 250) 100%);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    margin-top: 8%;
     background-size: cover;
-    border: 4px solid #ffffff;
-    border-radius: 10px;
+    border: 4px solid #ffffff00;
+    border-radius: 30px;
     overflow: hidden;
 }
 .menu-title {
     font-family: 'Pirata One', cursive; 
-    text-align: left;
+    text-align: center;
     font-weight: bold;
     z-index: 10;
     justify-content: center;
     align-items: center;
-    text-align: center;
     text-transform: uppercase;
-    left: 0%;    
-    font-size: 2.9rem;
+    font-size: 4.0rem;
     color: #ffd700; 
-    bottom: 0%;
     text-shadow: 3px 3px 0px #000000,   
-                 6px 6px 0px #8b4513;  
+                 6px 6px 0px #8b4513;
     position: relative;
-    padding: 0px;
-    animation: vanishIn 1s ease-in-out
+    padding: 0;
+    animation: vanishIn 1s ease-in-out;
+    letter-spacing: 10px;
 }
+
 .menu-title:hover {
     transform: scale(1.1);
 }
@@ -68,10 +68,10 @@ body {
 }
 .level {
     position: absolute;
-    width: 70px;
-    height: 70px;
-    background: radial-gradient(circle, rgba(214, 214, 16, 0) 0%, rgb(255, 255, 255) 100%);
-    border-radius: 20%;
+    width: 90px;
+    height: 90px;
+    background: radial-gradient(circle, rgba(214, 214, 16, 0) 0%, rgb(142, 255, 244) 100%);
+    border-radius: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,16 +104,16 @@ body {
     position: absolute;
     width: 10%;
     height: 12%;
-    top: 400px; 
+    top: 415px; 
     
-    left: 80%;
+    left: 82%;
     cursor: pointer;
 }
 .chest:hover {
     transform: scale(1.1);
 }
 .chest-img {
-    width: 90%;
+    width: 110%;
     height: 100%;
 }
 
@@ -186,7 +186,7 @@ body {
 
 .ship {
     position: absolute;
-    width: 70px;
+    width: 90px;
     transition: left 2s, top 2s; 
 }
 
@@ -250,6 +250,7 @@ body {
 @media (max-width: 768px) {
     .menu-title {
         font-size: 2rem;
+        letter-spacing: 0px;
         text-align: center;
         
     }
