--- a/PROYECTO-MJC memoorize/style/icon.css
+++ b/PROYECTO-MJC memoorize/style/icon.css
@@ -7,7 +7,7 @@
     cursor: pointer;
     position: relative;
     top: 2%;
-    right: 5%;
+    right: 99%;
 
     transition: 100ms;
 }
@@ -71,4 +71,18 @@
 }
 #home:hover{
     transform: scale(1.1);
+}
+@media (max-width: 768px) {
+    #playButton {
+        font-size: 20px;
+        padding: 10px 20px;
+        background-color: rgba(73, 20, 20, 0);
+        border: none;
+        cursor: pointer;
+        position: relative;
+        top: 4%;
+        right: 5%;
+    
+        transition: 100ms;
+    }
 }
