--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -322,7 +322,7 @@ body{
     text-shadow: 3px 3px 0px #ffffff00,   
                  6px 6px 0px #8b451300; 
     border-radius: 30px; 
-    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgba(171, 171, 169, 0.451) 100%);
+    background: radial-gradient(circle, rgb(214, 138, 16) 0%, rgba(171, 171, 169, 0.451) 100%);
     box-shadow: 0 0 15px rgb(255, 166, 0),
     inset 0 0 10px rgb(44, 166, 227); 
     position: absolute;
@@ -388,7 +388,9 @@ body{
     padding: 0px;
     animation: vanishIn 1s ease-in-out
 }
-
+.menu-title:hover{
+    color: #e68900;
+}
 @keyframes vanishIn {
     0% {
         opacity: 0;
@@ -405,17 +407,37 @@ li.nav-item {
     list-style: none;
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
     width: 60px;
     height: 60px;
-    background-image: url(../../img/mapa.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin: 0 9px;
+    margin: 0 12px;
     flex: 1;
     text-align: center;
+    background-color: #ff9100a3;
+    background-image:
+        linear-gradient(45deg, #d6760073 25%, transparent 25%),
+        linear-gradient(-45deg, #d67600a3 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, #d67500 75%),
+        linear-gradient(-45deg, transparent 75%, #d67500 75%);
+    background-size: 16px 16px;
+    border: 4px solid #d67500;
+    box-shadow: 2px 2px #d67500, 4px 4px #ff9100;
+    image-rendering: pixelated;
+    transition: none; /* Evita transiciones que podrían afectar la opacidad */
 }
+
+/* Estilo para el estado hover sin transparencia */
+li.nav-item:hover {
+    opacity: 1; /* Asegura que no haya transparencia */
+    background-color: #ff9100a3;
+    background-image:
+        linear-gradient(45deg, #d6760073 25%, transparent 25%),
+        linear-gradient(-45deg, #d67600a3 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, #d67500 75%),
+        linear-gradient(-45deg, transparent 75%, #d67500 75%);
+    box-shadow: 2px 2px #d67500, 4px 4px #ff9100; /* Mantiene la misma sombra */
+}
+
 nav.navbar {
     display: flex;
     justify-content: space-around;
@@ -815,7 +837,7 @@ nav {
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 0px;
-    margin-top: 8%;
+    margin-top: 0%;
     
 
 }
