--- a/PROYECTO-MJC memoorize/multijugador/crearSala/css/crearSala.css
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/css/crearSala.css
@@ -155,10 +155,10 @@ body {
 }
 .container {
     width: 40%;
-    height: auto;
+    height: 100%;
     text-shadow: 3px 3px 0px #ffffff07, 6px 6px 0px #8b451300;  
     position: relative;
-    padding: 10px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -217,9 +217,10 @@ body {
 
 .btnComparar button {
     border: none;
-    width: 30vh;
-    height: 8vh;
-    font-size: 1.6em;
+    width: 18vh;
+    height: 6vh;
+    font-size: 1.7em;
+    text-align: center;
     border-radius: 20px;
     background: radial-gradient(circle, rgb(16, 135, 214) 0%, rgb(215, 250, 16) 100%);
     box-shadow: 0 0 15px rgb(255, 166, 0), inset 0 0 10px rgb(44, 166, 227); 
@@ -227,8 +228,8 @@ body {
     transition: background-color 0.3s;
 }
 #crearSala img{
-    width: 20%;
-    height: 90%;
+    width: 18%;
+    height: 60%;
 }
 .btnComparar button:hover {
     background-color: #fdfdfd6e;
@@ -247,22 +248,32 @@ input.input:hover {
 @media (max-width: 768px) {
     .container {
         width: 90%;
-        padding: 0px;
+        padding: 50px;
         top: 15vh;
-        height: 400px;
+        height: 450px;
         right: 2%;
     }
 
     .menu-title {
-        font-size: 3rem;
-        top: 15vh;
+        font-size: 2rem;
+        top: 10vh;
     }
+    .menu{
+        right: 5%;
+    }
+    .back-button img{
+        width: 20%;
+        height: 20%;
 
+    }
+    .back-button{
+        bottom: 90%;
+    }
     .btnComparar button {
-        width: 170%;
+        width: 150%;
         height: 6vh;
-        bottom: 10%;
-        
+        margin-left: -30%;
+        margin-top: -100px;
         text-align: center;
         font-size: 1.5rem;
     }
@@ -273,6 +284,7 @@ input.input:hover {
         width: 100%;
         margin: 10px auto;
         padding: 1vh 2vh;
+        bottom: 15%;
     }
 
     input.input {
