--- a/PROYECTO-MJC memoorize/juegos/juego rompe/nivel/style.css
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/nivel/style.css
@@ -275,13 +275,14 @@ body {
 }
 @media (max-width: 768px) {
     .menu-title {
-        font-size: 2rem;
+        font-size: 2.9rem;
         letter-spacing: 0px;
         text-align: center;
         
     }
     .level-number {
-        font-size: 0.5em;
+        font-size: 2.0em;
+        color: #ffffff;
     }
     
     .level-label {
@@ -291,14 +292,14 @@ body {
     }
     .map-container {
         width: 330px;
-        height: 360px; 
-        right: 1%; 
-        margin-top: 40%;
+        height: 420px; 
+        right: 4%; 
+        margin-top: 30%;
     }
     
     .level {
-        width: 45px; 
-        height: 45px;
+        width: 90px; 
+        height: 80px;
         font-size: 1em; 
     }
     .logo {
@@ -310,25 +311,27 @@ body {
         width: 40%; 
         height: auto;
        
-
+    }
+    .menu{
+        right: 20px;
     }
     .ship {
         width: 70px;
     }
     .chest {
-        top: 50px;
-        left:15%;
+        top: 299px;
+        left:74%;
     }
     .chest-img {
-        width: 110%;
-        height: 80%;
+        width: 170%;
+        height: 100%;
     }
-    .level-1 { top: 50px; left: 150px; }
-    .level-2 { top: 50px; left: 250px; }
-    .level-3 { top: 140px; left: 250px; }
-    .level-4 { top: 140px; left: 150px; }
-    .level-5 { top: 140px; left: 50px; } 
-    .level-6 { top: 240px; left: 50px; }
-    .level-7 { top: 240px; left: 150px; }
-    .level-8 { top: 240px; left: 250px; }
+    .level-1 { top: 70px; left: 10px; }
+    .level-2 { top: 70px; left: 120px; }
+    .level-3 { top: 70px; left: 230px; }
+    .level-4 { top: 170px; left: 230px; }
+    .level-5 { top: 170px; left: 120px; } 
+    .level-6 { top: 170px; left: 10px; }
+    .level-7 { top: 280px; left: 10px; }
+    .level-8 { top: 280px; left: 120px; }
 }
