--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -8,14 +8,18 @@ body {
     background-size: cover;
     background-attachment: fixed;
 }
+.bloqueado{
+    width: 60px;
+    height: 60px;
+}
 .map-container {
     position: relative;
     width: 880px;
     height: 620px;
     margin-top: 5%;
-    background-color: #e0c88c; /* Color base estilo pergamino */
+    background-color: #dbb877; /* Color base estilo pergamino */
     background-image:
-        linear-gradient(90deg, rgba(182, 161, 122, 0.479) 25%, transparent 25%, transparent 75%, rgba(221, 195, 147, 0.4) 75%),
+        linear-gradient(90deg, rgba(179, 142, 101, 0.479) 25%, transparent 25%, transparent 75%, rgba(221, 195, 147, 0.4) 75%),
         linear-gradient(180deg, rgba(221, 195, 147, 0.4) 25%, transparent 25%, transparent 75%, rgba(221, 195, 147, 0.4) 75%),
         url(''); /* Imagen de textura si tienes alguna */
     background-size: 40px 40px, 40px 40px, cover;
