--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -133,10 +133,13 @@ body{
     padding-left: 50px; /* Ajusta según el tamaño del icono */
 }
 #pista{
-    display:flex;
     justify-content: flex-end;
     color: black;
     font-size: 110%;
+    
+}
+.contentPista{
+    width: 100%;
     
 }
 .back-button {
